--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -164,6 +164,7 @@ aside h3 {
 
 #leftnavigation a:hover, #leftnavigation a.currentpage {
     background-color: #FF5252;
+    border-bottom: 2px solid #607D8B;
 }
 
 form {
